# sync-settings-dotenv

./: .gitignore  CHANGELOG.md  Makefile  README.md  module_imports.py  pyproject.toml
.github/workflows/: linter.yml  publish.yml  tests.yml
src/sync_settings_dotenv/: __init__.py  celery.py  main.py  utils.py
tests/: test_command.py  test_utils.py
