[project]
name = "sync-settings-dotenv"
version = "0.0.1"
description = "A CLI tool to export environment variables from Python settings files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.20.0"]

[dependency-groups]
dev = ["pyrefly==0.42.0", "pytest==9.0.1", "ruff==0.14.5"]

[project.scripts]
sync-dotenv = "sync_settings_dotenv.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C", "Q", "B", "A", "PL", "I", "RET"]
ignore = [
    "B008", # Incompatible with typer
]

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]

[tool.ruff.lint.mccabe]
max-complexity = 10
